# NEMWEB

./: .gitignore  AGENTS.md  FLAGS.md  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  today-live.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: deploy-cloudflare-pages.yml  deploy-pages.yml  deploy-worker.yml  ingest.yml  live-data.yml  playwright.yml  test.yml
__fixtures__/: dayData.ts
analysis/: __init__.py  registry.py
app/: globals.css  layout.tsx  page.tsx
components/: ForecastChart.test.tsx  ForecastChart.tsx  ForecastErrorChart.test.tsx  ForecastErrorChart.tsx
docs/: ARCHITECTURE.md  CLOUDFLARE_SETUP.md  CONTEXT_INDEX.md  DATA_CONTRACTS.md  WORKSTREAMS.md
docs/DECISIONS/: 0001-cloudflare-runtime.md  0002-storage-layout.md  0003-ci-cloudflare-transition.md
docs/PLANS/: 01-frontend.md  02-ingest.md  03-storage-catalog.md  04-worker-api.md  05-analysis.md  (+3 more)
e2e/: forecast.spec.ts
ingest/: README.md  dataset_contracts.py  ingest.py  nemweb.py  pyproject.toml  rankings.py  test_parser.py
lib/: api.ts  chartData.test.ts  chartData.ts  csv.test.ts  csv.ts  data.test.ts  data.ts  dataClient.ts  dataSource.ts  forecastErrorData.test.ts  forecastErrorData.ts  live.ts  liveDay.test.ts  liveDay.ts  useLiveData.ts  useLiveDemand.ts  useLiveSeries.ts
scripts/: fetch_live.py  publish_cloudflare.py
tests/: test_analysis.py  test_fetch_live.py  test_ingest.py  test_publish_cloudflare.py
worker/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  wrangler.toml
(+467 files in other folders)
