[project]
name = "nemweb-ingest"
version = "0.1.0"
description = "Daily ingestion of AEMO NEMWEB forecast and actual files for the NEMWEB forecast tracker."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "python-dateutil>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# Tests live both alongside the package (ingest/test_parser.py) and at the
# repo root (tests/). Both are runnable directly; pytest discovers them from
# the repo root.
testpaths = ["test_parser.py", "../tests"]
